--- a/sass/MyProfile.sass
+++ b/sass/MyProfile.sass
@@ -59,10 +59,14 @@ body
                     margin: 0
                     cursor: pointer
                     a
-                        margin-right: 15px
-                    img
-                        width: 2.5vw
-                        height: 2.5vw
+                        display: flex
+                        align-items: center
+                        text-decoration: underline
+                        span
+                            margin-right: 15px
+                        img
+                            width: 2.5vw
+                            height: 2.5vw
         .header__navigation
             a,p
                 color: black
@@ -382,7 +386,7 @@ body
                                 font: 600 14px 'Manrope'
                                 color: #000
             .header__navigation
-                a
+                a,p
     
                     font: 400 11px 'Manrope'
 
@@ -508,6 +512,7 @@ body
                         align-items: center
                         justify-content: space-between
                         .burder__logo_block
+                            cursor: pointer
                             display: flex
                             align-items: center
                             .burder__logo_wrapper
