--- a/css/MyProfile.css
+++ b/css/MyProfile.css
@@ -71,9 +71,14 @@ body {
   cursor: pointer;
 }
 .container .header .nav .header__ol .header__li:last-child a {
+  display: flex;
+  align-items: center;
+  text-decoration: underline;
+}
+.container .header .nav .header__ol .header__li:last-child a span {
   margin-right: 15px;
 }
-.container .header .nav .header__ol .header__li:last-child img {
+.container .header .nav .header__ol .header__li:last-child a img {
   width: 2.5vw;
   height: 2.5vw;
 }
@@ -466,7 +471,7 @@ body {
     font: 600 14px "Manrope";
     color: #000;
   }
-  .container .header .header__navigation a {
+  .container .header .header__navigation a, .container .header .header__navigation p {
     font: 400 11px "Manrope";
   }
   .container .main {
@@ -614,6 +619,7 @@ body {
     justify-content: space-between;
   }
   .container .header .nav .burger__container .burger__block .burder__logo_block {
+    cursor: pointer;
     display: flex;
     align-items: center;
   }
