--- a/css/SettingProfile.css
+++ b/css/SettingProfile.css
@@ -67,8 +67,16 @@
   cursor: pointer;
 }
 .container .header .nav .header__ol .header__li:last-child a {
+  display: flex;
+  align-items: center;
   text-decoration: underline;
+}
+.container .header .nav .header__ol .header__li:last-child a span {
   margin-right: 15px;
+}
+.container .header .nav .header__ol .header__li:last-child a img {
+  width: 2.5vw;
+  height: 2.5vw;
 }
 .container .header .header__navigation a, .container .header .header__navigation p {
   color: grey;
@@ -352,11 +360,22 @@
     font: 400 11px "Manrope";
   }
   .container .header .nav .header__ol .header__li:last-child {
+    display: flex;
+    align-items: center;
     margin: 0;
+    cursor: pointer;
   }
-  .container .header .nav .header__ol .header__li:last-child img {
-    width: 30px;
-    height: 30px;
+  .container .header .nav .header__ol .header__li:last-child a {
+    display: flex;
+    align-items: center;
+    text-decoration: underline;
+  }
+  .container .header .nav .header__ol .header__li:last-child a span {
+    margin-right: 15px;
+  }
+  .container .header .nav .header__ol .header__li:last-child a img {
+    width: 2.5vw;
+    height: 2.5vw;
   }
   .container .header .header__navigation a, .container .header .header__navigation p {
     font-size: 10px;
