--- a/css/SingIn.css
+++ b/css/SingIn.css
@@ -56,40 +56,18 @@
   color: #1A5653;
 }
 .container .header .nav .header__ol .header__li:last-child {
+  display: flex;
+  align-items: center;
   margin: 0;
   cursor: pointer;
 }
-.container .header .header__section {
-  height: 90%;
+.container .header .nav .header__ol .header__li:last-child a {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
-.container .header .header__section div h1 {
-  font: 700 64px "e-Ukraine";
-  color: rgba(11, 10, 10, 0.5568627451) 8;
-  margin-bottom: 50px;
-}
-.container .header .header__section div p {
-  font: 400 32px "Manrope";
-  color: #1A5653;
-  text-align: center;
-  margin-bottom: 90px;
-}
-.container .header .header__section div div {
-  display: flex;
-  justify-content: center;
-}
-.container .header .header__section div div button {
-  padding: 24px 60px;
-  background: #1A5653;
-  border-radius: 999px;
-}
-.container .header .header__section div div button a {
-  text-decoration: none;
-  text-align: center;
-  font: 600 24px "Manrope";
-  color: #1A5653;
+.container .header .nav .header__ol .header__li:last-child a img {
+  width: 2.5vw;
+  height: 2.5vw;
 }
 .container .main {
   margin-bottom: 200px;
@@ -105,7 +83,7 @@
   text-align: center;
 }
 .container .main .main__section1 .section1__wrapper .section1__title h1 {
-  font: 700 48px "e-Ukraine";
+  font: 700 38px "e-Ukraine";
   margin-bottom: 66px;
 }
 .container .main .main__section1 .section1__wrapper .section1__input_text input, .container .main .main__section1 .section1__wrapper .section1__input_pass input {
@@ -202,34 +180,6 @@
   .container .header .nav .header__ol .header__li:last-child {
     margin: 0;
   }
-  .container .header .header__section {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-  }
-  .container .header .header__section div h1 {
-    font: 700 38px "e-Ukraine";
-    margin-bottom: 50px;
-  }
-  .container .header .header__section div p {
-    font: 400 20px "Manrope";
-    text-align: center;
-    margin-bottom: 60px;
-  }
-  .container .header .header__section div div {
-    display: flex;
-    justify-content: center;
-  }
-  .container .header .header__section div div button {
-    border: 0;
-    padding: 8px 30px;
-    border-radius: 999px;
-  }
-  .container .header .header__section div div button a {
-    text-decoration: none;
-    text-align: center;
-    font: 600 20px "Manrope";
-  }
 }
 @media screen and (max-width: 1050px) {
   .container .header {
@@ -253,7 +203,7 @@
   }
   .container .header .nav .header__ol .header__li a {
     text-decoration: none;
-    font: 400 12px "Manrope";
+    font: 400 10px "Manrope";
   }
   .container .header .nav .header__ol .header__li:last-child {
     margin: 0;
@@ -262,35 +212,85 @@
     width: 30px;
     height: 30px;
   }
-  .container .header .header__section {
-    align-items: center;
+  .main {
+    margin-bottom: 200px;
+  }
+  .main .main__section1 {
     display: flex;
     justify-content: center;
-    height: 370px;
   }
-  .container .header .header__section div h1 {
-    font: 700 23px "e-Ukraine";
-    margin-bottom: 20px;
+  .main .main__section1 .section1__wrapper {
+    width: 700px;
   }
-  .container .header .header__section div p {
-    font: 400 14px "Manrope";
+  .main .main__section1 .section1__wrapper .section1__title {
     text-align: center;
-    margin-bottom: 20px;
   }
-  .container .header .header__section div div {
-    display: flex;
-    justify-content: center;
+  .main .main__section1 .section1__wrapper .section1__title h1 {
+    font: 700 38px "e-Ukraine";
+    margin-bottom: 66px;
   }
-  .container .header .header__section div div button {
-    border: 0;
-    padding: 4px 15px;
+  .main .main__section1 .section1__wrapper .section1__input_text input, .main .main__section1 .section1__wrapper .section1__input_pass input {
+    box-sizing: border-box;
+    border: 1px solid black;
+    padding-left: 28px;
     border-radius: 999px;
+    font: 400 12px "Manrope";
+    color: grey;
+    height: 65px;
+    width: 100%;
   }
-  .container .header .header__section div div button a {
-    text-decoration: none;
+  .main .main__section1 .section1__wrapper .section1__input_text input:focus, .main .main__section1 .section1__wrapper .section1__input_pass input:focus {
+    outline: none;
+    border: 1.4px solid rgb(16, 120, 105);
+    color: rgb(16, 120, 105);
+  }
+  .main .main__section1 .section1__wrapper .section1__input_text {
+    margin-bottom: 30px;
+  }
+  .main .main__section1 .section1__wrapper .section1__input_pass {
+    margin-bottom: 10px;
+  }
+  .main .main__section1 .section1__wrapper .section1__container {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+  }
+  .main .main__section1 .section1__wrapper .section1__container p {
+    margin-right: 5px;
+    font: 500 16px "Manrope";
+    color: rgb(26, 86, 83);
+  }
+  .main .main__section1 .section1__wrapper .section1__container img {
+    height: 10px;
+    width: 15px;
+  }
+  .main .main__section1 .section1__wrapper .section1__enter {
+    cursor: pointer;
+    margin-bottom: 30px;
+    border-radius: 999px;
+    background: rgb(26, 86, 83);
+    padding: 15px 0;
     text-align: center;
-    font: 600 14px "Manrope";
-    color: #000;
+  }
+  .main .main__section1 .section1__wrapper .section1__enter a {
+    text-decoration: none;
+    color: #fff;
+    font: 600 24px "Manrope";
+  }
+  .main .main__section1 .section1__wrapper .section1__nav {
+    display: flex;
+    justify-content: center;
+  }
+  .main .main__section1 .section1__wrapper .section1__nav .section1__nav_tex1 {
+    margin-right: 10px;
+    font: 400 24px "Manrope";
+    color: rgb(140, 140, 140);
+  }
+  .main .main__section1 .section1__wrapper .section1__nav a {
+    text-decoration: none;
+    font: 600 24px "Manrope";
+    color: rgb(140, 140, 140);
   }
 }
 @media screen and (max-width: 768px) {
@@ -395,43 +395,6 @@
     width: 30px;
     height: 30px;
   }
-  .container .header .header__section {
-    display: flex;
-    justify-content: center;
-    height: 60%;
-  }
-  .container .header .header__section div div {
-    text-align: center;
-  }
-  .container .header .header__section div div h1 {
-    width: min-content;
-    font: 700 23px "e-Ukraine";
-    color: #fff;
-    margin-bottom: 20px;
-    display: block;
-  }
-  .container .header .header__section div p {
-    font: 400 14px "Manrope";
-    color: #fff;
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  .container .header .header__section div div {
-    display: flex;
-    justify-content: center;
-  }
-  .container .header .header__section div div button {
-    border: 0;
-    padding: 4px 15px;
-    background: #fff;
-    border-radius: 999px;
-  }
-  .container .header .header__section div div button a {
-    text-decoration: none;
-    text-align: center;
-    font: 600 14px "Manrope";
-    color: #000;
-  }
   .container .main {
     margin-bottom: 100px;
     padding: 0 4.16vw;
@@ -448,7 +411,7 @@
     text-align: center;
   }
   .container .main .main__section1 .section1__wrapper .section1__title h1 {
-    font: 700 40px "e-Ukraine";
+    font: 700 38px "e-Ukraine";
     margin-bottom: 30px;
   }
   .container .main .main__section1 .section1__wrapper .section1__input_text, .container .main .main__section1 .section1__wrapper .section1__input_pass {
