--- a/sass/Instruction.sass
+++ b/sass/Instruction.sass
@@ -91,12 +91,12 @@ body
                             font: 600 24px 'Manrope'
                             color:  #1A5653
         .header__navigation
-            a
+            a,p
                 color: black
                 text-decoration: none
                 display: inline
                 font: 400 1.1vw 'Manrope'
-            a:first-child
+            a
                 color: grey
     .main
         padding:  0 3.12vw//80px
@@ -598,7 +598,7 @@ body
                             width: 30px
                             height: 30px
             .header__navigation
-                a
+                a,p
                     font-size: 11px
             
         .main
@@ -644,7 +644,6 @@ body
                                 cursor: pointer
                                 font: 500 16px 'Manrope'
                                 padding: 0
-                                background: #fff
                                 border: none
                                 img
                                     width: 15px
@@ -891,37 +890,7 @@ body
                         img
                             width: 30px
                             height: 30px
-            .header__section
-                display: flex
-                justify-content: center
-                height: 60%
-                div
-                    div
-                        text-align: center
-                        h1
-                            width: min-content
-                            font: 700 23px 'e-Ukraine'
-                            color: #fff
-                            margin-bottom: 20px
-                            display: block
-                    p
-                        font: 400 14px 'Manrope'
-                        color: #fff
-                        text-align: center
-                        margin-bottom: 20px
-                    div
-                        display: flex
-                        justify-content: center
-                        button
-                            border: 0
-                            padding: 4px 15px
-                            background: #fff
-                            border-radius: 999px
-                            a
-                                text-decoration: none
-                                text-align: center
-                                font: 600 14px 'Manrope'
-                                color: #000
+            
         .main
             padding:  0 4.16vw//0 80px
             max-width: 100vw
@@ -964,7 +933,6 @@ body
                             button
                                 font: 500 16px 'Manrope'
                                 padding: 0
-                                background: #fff
                                 border: none
                                 img
                                     width: 15px
