--- a/sass/Registry.sass
+++ b/sass/Registry.sass
@@ -49,35 +49,20 @@
                         font: 400 24px 'Manrope'
                         color: #1A5653
                 .header__li:last-child
+                    display: flex
+                    align-items: center
                     margin: 0
                     cursor: pointer
-        .header__section
-            height: 90%
-            display: flex
-            justify-content: center
-            align-items: center
-            div
-                h1
-                    font: 700 64px 'e-Ukraine'
-                    color: #0b0a0a8e8
-                    margin-bottom: 50px
-                p
-                    font: 400 32px 'Manrope'
-                    color: #1A5653
-                    text-align: center
-                    margin-bottom: 90px
-                div
-                    display: flex
-                    justify-content: center
-                    button
-                        padding: 24px 60px
-                        background:  #1A5653
-                        border-radius: 999px
-                        a
-                            text-decoration: none
-                            text-align: center
-                            font: 600 24px 'Manrope'
-                            color:  #1A5653
+                    a
+                        display: flex
+                        align-items: center
+                        text-decoration: underline
+                        span
+                            margin-right: 15px
+                        img
+                            width: 2.5vw
+                            height: 2.5vw
+       
     .main
         .main__section1
             display: flex
