--- a/sass/SettingProfile.sass
+++ b/sass/SettingProfile.sass
@@ -55,8 +55,14 @@
                     margin: 0
                     cursor: pointer
                     a
+                        display: flex
+                        align-items: center
                         text-decoration: underline
-                        margin-right: 15px
+                        span
+                            margin-right: 15px
+                        img
+                            width: 2.5vw
+                            height: 2.5vw
         .header__navigation
             a,p
                 color: grey
@@ -290,10 +296,19 @@
                             text-decoration: none
                             font: 400 11px 'Manrope'
                     .header__li:last-child
+                        display: flex
+                        align-items: center
                         margin: 0
-                        img
-                            width: 30px
-                            height: 30px
+                        cursor: pointer
+                        a
+                            display: flex
+                            align-items: center
+                            text-decoration: underline
+                            span
+                                margin-right: 15px
+                            img
+                                width: 2.5vw
+                                height: 2.5vw
             .header__navigation 
                 a,p
                     font-size: 10px
