--- a/sass/Instruction.sass
+++ b/sass/Instruction.sass
@@ -149,6 +149,8 @@ body
                                 p:nth-child(1)
                                     margin-right: 15px   
                             .custom-button
+                                img
+                                    cursor: pointer
                                 .custom-prev
                                     margin-right: 3.125vw     
                         .swiper__container
@@ -222,6 +224,7 @@ body
                     justify-content: end
                     margin-bottom: 120px
                     button
+                        cursor: pointer
                         font: 600 14px 'Manrope'
                         color: #fff
                         padding: 14px 60px
@@ -321,123 +324,7 @@ body
                                 text-align: center
                                 font: 600 20px 'Manrope'
                                 color: #000
-        // .main
-        //     padding: 0 3.12vw//80px
-        //     .main__section1
-        //         .section1__container
-        //             .section1__wrapper
-        //                 margin-bottom: 60px
-        //                 .section1__text:nth-child(1)
-        //                     font: 700 42px 'e-Ukraine'
-        //                     margin-bottom: 60px
-        //                 .section1__text:nth-child(2)
-        //                     font: 400 20px 'Manrope'
-        //                     margin-bottom: 30px
-        //                 .section1__text:nth-child(3)
-        //                     font: 400 20px 'Manrope'
-        //                 .section1__text:nth-child(4)
-        //                     font: 600 20px 'Manrope'
-        //             .section1__wrapper2
-        //                 display: grid
-        //                 grid-template-columns: 1fr 1fr
-        //                 margin-bottom: 60px
-        //                 gap: 1.56vw
-        //                 .wrapper2__block_photo
-        //                     max-width: 100%
-        //                     img
-        //                         width: 100%
-        //                         height: 100%
-        //                 .section1__swipee_block
-        //                     flex-grow: 1
-        //                     width: 44.79vw
-        //                     border: 2px solid black
-        //                     border-radius: 30px
-        //                     padding: 3.3vw 3.3vw 2.48vw 3.3vw
-        //                     .wrapper2__counter_block
-        //                         display: flex
-        //                         justify-content: space-between
-        //                         margin-bottom: 1.655vw
-        //                         .wrapper2__counter_text
-        //                             display: flex  
-        //                             p
-        //                                 font: 700 2.2vw 'e-Ukraine' //32px
-        //                             p:nth-child(4),p:nth-child(3)
-        //                                 color: grey
-        //                             p:nth-child(1)
-        //                                 margin-right: 15px
-                                    
-        //                         .custom-button
-        //                             img
-        //                                 width: 2.89vw//35px
-        //                                 height: 2.48vw//30px
-        //                             .custom-prev
-        //                                 margin-right: 3.125vw     
-        //                     .swiper__container
-        //                         max-width: 100%
-        //                         height: 100%
-        //                         .swiper
-        //                             height: 25vw//min-content
-        //                             //position: relative
-        //                             width: 100%
-        //                             .swiper-wrapper
-        //                                 height: 300px
-        //                                 .swiper-slide:nth-child(1)
-        //                                     height: 150px
-        //                                     position: relative
-        //                                     height: min-content
-        //                                     .swiper-slide1_block-text
-        //                                         p
-        //                                             color: #000
-        //                                             font: 400 1.4vw 'Manrope' //16
-        //                                             margin-bottom: 20px
-        //                                     .swiper-slide1_block
-        //                                         height: 8.5vw//120px
-        //                                         overflow: scroll
-        //                                         overflow-x: hidden
-        //                                         padding-right: 20px
-        //                                         .slide1__block_scroll
-        //                                             display: flex
-        //                                             justify-content: space-between
-        //                                             p,select
-        //                                                 font: 600 1.3vw 'Manrope' //16
-        //                                             select
-        //                                                 border: 0
-        //                                                 option
-        //                                                     width: 20px
-        //                                                     font: 600 8px 'Manrope'
-        //                                         .slide1__block_scroll2
-        //                                             height: 6.3vw//95px
-        //                                             a
-        //                                                 display: inline-block
-        //                                                 font: 400 1.2vw 'Manrope'
-        //                                                 color: #058ED9
-        //                                                 margin-bottom: 0.4vw//10px
-                                                        
-        //                                     .swiper-pagination
-        //                                         padding-top: 30px
-        //                                 .swiper-slide:nth-child(2),.swiper-slide:nth-child(3),.swiper-slide:nth-child(5),.swiper-slide:nth-child(6)
-        //                                     font: 400 1.3vw 'Manrope'
-        //                                 .swiper-slide:nth-child(4)
-        //                                     font: 400 1vw 'Manrope'
-        //                                     ol
-        //                                         list-style: inside
-        //                                         li
-        //                                             margin-bottom: 10px
-        //                                         li:last-child
-        //                                             margin-bottom: 20px
-        //                                     p:first-child
-        //                                         margin-bottom: 30px   
-        //             .section1__button
-        //                 display: flex
-        //                 justify-content: end
-        //                 margin-bottom: 120px
-        //                 button
-        //                     font: 600 14px 'Manrope'
-        //                     color: #fff
-        //                     padding: 14px 60px
-        //                     border: 0
-        //                     background: #1A5653
-        //                     border-radius: 30px
+       
 
         .footer
             padding: 4.12vw 7.16vw 6.25vw 4.16vw  //60px 80px 120px 80px
