--- a/sass/ReportPhoto.sass
+++ b/sass/ReportPhoto.sass
@@ -473,6 +473,7 @@
                         justify-content: space-between
                         margin-bottom: 0px
                         .burder__logo_block
+                            cursor: pointer
                             display: flex
                             align-items: center
                             .burder__logo_wrapper
@@ -650,7 +651,7 @@
                 .burger__container
                     display: block
                     box-sizing: border-box
-                    padding: 20px 20px 0 20px
+                    padding: 0//20px 20px 0 20px
                     width: 100%
                     height: auto//100vh
                     position: relative
