--- a/css/Main.css
+++ b/css/Main.css
@@ -1371,7 +1371,7 @@ body {
     overflow: hidden;
     position: relative;
     margin-bottom: 40px;
-    height: 60vh;
+    height: 100vh;
   }
   .container .header .nav {
     position: relative;
@@ -1467,7 +1467,11 @@ body {
     height: 30px;
   }
   .container .header .header__section {
-    height: 60%;
+    height: auto;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
   .container .header .header__section div div {
     text-align: center;
