--- a/sass/Main.sass
+++ b/sass/Main.sass
@@ -1132,7 +1132,7 @@ body
             overflow: hidden
             position: relative
             margin-bottom: 40px
-            height: 60vh
+            height: 100vh//60vh
             .nav
                 position: relative
                 overflow: hidden
@@ -1211,7 +1211,11 @@ body
                             width: 30px
                             height: 30px
             .header__section
-                height: 60%
+                height: auto //60%
+                position: absolute
+                left: 50%
+                top: 50%
+                transform: translate(-50%,-50%)
                 div
                     div
                         text-align: center
@@ -1430,7 +1434,7 @@ body
                             align-items: center
                             justify-content: center
                             padding: 0
-                            background: rgb(26, 86, 83)
+                            background: rgba(26, 86, 83)
                             border-radius: 999px
                             width: 100%
                             a   
